encrypt button function and reset button function

--- a/cipher-message/encrypt-it.html
+++ b/cipher-message/encrypt-it.html
@@ -1,4 +1,5 @@
-<!DOCTYPE>
+<!DOCTYPE html>
+<script type="text/javascript" src="encrypt-it.js"></script>
 <html>
   <head>
     <title>Encrypt-It!</title>
