--- a/cipher-message/encrypt-it.html
+++ b/cipher-message/encrypt-it.html
@@ -32,7 +32,7 @@
 
       <div id="result-area">
         <h2>Result:</h2>
-        <p id="result"></p>
+        <p id="result" value=""></p>
       </div>
     </main>
   </body>
